assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;600&display=swap');

*{
    margin: 0;
    padding: 0;
    border: none;
    
}

body {
    background-color: #F7F7F7;
    font-family: 'Work Sans', sans-serif;;
    font-weight: 300;
    color: #3a3a3a;
    -ms-overflow-style: none; /* hide scroll bar for Internet Explorer, Edge */
    /*for Firefox */
    overflow-y: scroll; 
    
}

body::-webkit-scrollbar {
    display: none; /* hide scroll bar for Chrome, Safari, and Opera */
  }

/* headings and logo */

h1, h2 {
    font-family: 'Work Sans', sans-serif;
    /*letter-spacing: 4px;*/
    
}




.logo-box {
    float: left;
    
    margin-left: 30px;
}

.logo-image {
    /* height: 0%; */
    width: 37%;
    padding-top: 20px;
    padding-bottom: 20px;
}




.menu {
    font-size: 120%;
    letter-spacing: 2px;
    float: right;
    
    
}

.menu, .logo-text {
    line-height: 75px;
    padding-top: 30px;
    padding-bottom: 30px;
}



.menu li {
    float: left;
    list-style-type: none;
    margin-right: 30px;
}

.menu a {
    text-decoration: none;
    color: inherit;
}

.menu a:hover {
    border-bottom: 1px solid #3a3a3a;
}

.active{
    border-bottom: 1px solid #3a3a3a;
}

/* hero_image */

section {
    
        display: flex;
        flex-direction: column;
        /*min-height: 120vh;*/
        
      }
      
      main {
        flex: 1;
      }


.hero-outer {
    height: auto;
    width: 100%;
    overflow: hidden;
    clear: both;
    position: relative;
}

.hero_image_box {
    /*display: flex;
    justify-content: space-around;*/
    height: 600px;
    width: 100%;
    overflow: hidden;
    position: relative;
    
}

/*#hero-image {
    width: 100%;
    max-width: 100%;
    height: auto;
}*/

.hero_image_box {
    height: 600px;
    width: 100%;
    /*object-fit: cover;*/
    /*max-width: 800px;*/
    background: url('../images/new_hero_image.webp') no-repeat center right;
}

#text-over-hero-image {
    font-family: Work Sans;
    width: 520px;
    height: 113px;
    top: 140px;
    left: 120px;
    position: absolute;
}

#text-over-hero-image h2 {
    font-weight: bold;
    font-size: 45px;
    color: #fffcf8;
}

#text-over-hero-image p {
    font-style: normal;
    font-size: 28px;
    color: #fffcf8;
}
    /*


    height: 1000px;
    width: 100%;
    background: url('../images/hero_image_3.webp') no-repeat center center;
    background-size: cover;
    
    padding-top: 10px;
    padding-bottom: 10px;
    /*object-fit: contain;*/
    /*background-attachment: fixed;*/
/*
    /*height: 600px;*//*
    width: 100%;
    background: url('../images/hero_image_2.webp') no-repeat center center;
    background-size: 100% auto;
    padding-top: 46%;
    opacity: 0.7;
*/
   /* 
    
    
    
    
    overflow: hidden;
    
    

*/

.greeting-box-container {
    display: flex;
    justify-content: center;
    
    margin: 50px 0 50px 0;
}

.flex-greeting {
    width: 450px;
    margin: 10px;
    
}

.greeting-header {
    padding: 80px 0;
    text-align: right;
    margin-left: 150px;
    font-size: 400%;

}

.greeting-message {
    
    margin-right: 150px;
    padding: 80px 0;
    text-align: justify;
}

.featured-items {
    clear: both;
    
}

.featured-flex-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    align-content: flex-end;
    margin-left: 30px;
    margin-right: 30px;
    
    
    
}

.featured-items div div {
    width: 17vw;
    height: 17vw;
    display: inline-block;
    position: relative;
    
    margin-bottom: 100px;
    padding: 4%;
    
    vertical-align: top;
    box-shadow: 0 0 16px rgb(0 0 0 / 15%);
    text-align: center;
    margin-left: 10px;
    margin-right: 10px;
    background-color: rgb(238, 228, 210);
}

.featured-items div div p {
    text-align: center;
    font-weight: bold;
    font-size: 100%;
    text-transform: capitalize;
    text-shadow: -0.5px 1px rgb(92, 91, 91);
    padding-top: 2px;
    
}

.featured-items div div img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    object-position: center center;
    
}


footer {
    text-align: center;
    position: relative;
    bottom: 0; 
    
    width: 100%;
    
}

.social-networks {
    text-align: center;
    height: 100px;
    
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #3a3a3a;
    
}

.hero-contact-button {
    width: 267px;
    line-height: 265px;
    border-radius: 18px;
    padding: 11px 40px 11px 40px;
    background-color: #d90368;
    color: #fffcf8;
    text-decoration: none;
}

.contact-section {
    clear: both;
    background: url("../images/several_colorful_helium_balloon_on_wite_background.webp");
    background-size: cover;
    background-position: center center;
    height: 600px;
    align-content: center;
    padding: 5% 0;
    
}

.form-div{
    display: flex;
    justify-content: center;
    align-items: center;
    height:  100%;
    
}

.contact-form {
    /*margin: 150px 10% 0 0;*/
    color: rgb(22, 21, 21);
    /*background-color: rgba(112, 110, 108, 0.6);*/
    /*background-color: white;*/
    background-color: rgba(255, 255, 255, 0.9);
    
    max-width: 290px;
    position: absolute;
    /*left: 10%;*/
    padding: 4%;
    align-content: center;
}

.contact-form h2 {
    padding: 2%;
    text-align: center;
}

.text-input {
    background: transparent;
    color: black;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #c22f2f;
    border-radius: 2px;
}

.message-input {
    background: transparent;
    color: black;
    width: 100%;
    height: 100%;
    margin: 5px 0 20px 0;
    border: 1px solid #c22f2f;
    border-radius: 2px;
}

.text-input:hover {
    border-color: blue;
}

.message-input:hover {
    border-color: blue;
}

.contact-button {
    margin-top: 20px;
    border-radius: 2px;
    padding: 15px 32px 15px 32px;
    text-align: center;
    font-size: 100%;
    background-color: #f16c6b;
    color: #fafafa;
    display: block;
}

.contact-button:hover {
    background-color: #000000;
    color: #E66558;
}

/* Media queries */

/* For larger to medium screens size from 1170px wide and down */
@media screen and (max-width: 1170px) {

    .menu {
        margin-bottom: 20px;
        margin-left: 30px;
        clear: left;
        float: left;
        
        
        line-height: 25px;
    }

    .greeting-box-container {
        display: flex;
        float: none;
        width: 100%;
        flex-wrap: wrap;
    }

    .greeting-header {
        margin: 0 30px 0 30px;
        padding: 0 5%;
        text-align: center;

    }

    .greeting-message {
        margin: 0 30px 0 30px;
        padding: 0 5%;
        text-align: center;
    }

    .flex-greeting {
        width: 100%;
    }

    
    

    .featured-flex-content {
        /*display: grid;*/
        /*grid-template-columns: 1fr 1fr;*/
        /*align-self: center;
        justify-self: center;*/
        grid-gap: 30px;
        
    }

    .featured-items div div {
        width: 25vw;
        height: 25vw;
        padding: 7%;
        /*margin: 0;*/
    }


}

/* For small screen sizes 800px and down */
@media screen and (max-width: 800px) {
    .featured-flex-content {
        display: flex;
    }
    
    .featured-items div div {
        width: 100%;
        height: 100%;
        margin: 0;
    }
}

